--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,17 @@
 <h1><%= @article.title %></h1>
-<p> <%= @article.body %></p>
-<%= link_to 'Back to Articles', articles_path %>
+<p><small>Created - <%= @article.created_at.strftime("%Y-%m-%d") %></small></p>
+<p>
+<div class="panel panel-default" style="padding: 5px; min-height: 200px;">
+<%= @article.body %>
+</p>
+</div>
+<%= link_to 'Back', articles_path %>  |  
+<%= link_to 'Edit', edit_article_path(@article) %>  |  
+<%= link_to 'Delete', article_path(@article), method: :delete, 
+    data: {confirm: "Confirm Delete Article"} %>
+
+<h3>Post Comment</h3>
+<p></p>
+
+<h3>Comments</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
