--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,8 +10,7 @@
 <%= link_to 'Delete', article_path(@article), method: :delete, 
     data: {confirm: "Confirm Delete Article"} %>
 
-<h3>Post Comment</h3>
-<p></p>
+<%= render partial: 'comments/form' %>
 
-<h3>Comments</h3>
+<h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
