--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,9 +1,7 @@
 <%= form_for @article do |f| %>
-  <ul>
   <% @article.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
+    <% flash[:error] = error %>
   <% end %>
-  </ul>
   
   <p>
     <%= f.label :title %></br>
