--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,6 +2,10 @@
 <h4>Post Comment</h4>
 
 <%= form_for [@article, @comment] do |f| %>
+  <% @comment.errors.full_messages.each do |error| %>
+    <% flash[:error] = error %>
+  <% end %>
+  
   <p>
     <%= f.label :author_name %></br>
     <%= f.text_field :author_name %>
