--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,12 +7,12 @@
   <% end %>
   
   <p>
-    <%= f.label :author_name %></br>
+    <%= f.label :author_name, "Your Name" %></br>
     <%= f.text_field :author_name %>
   </p>
   
   <p>
-    <%= f.label :body %></br>
+    <%= f.label :body, "Comment" %></br>
     <%= f.text_area :body %>
   </p>
   
