--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,3 @@
-
 <h3>Articles Associated with Tag '<%= @tag.name %>'</h3>
 </br>
   <ul>
@@ -8,3 +7,5 @@
     </li>
     <% end %>
   </ul>
+
+<%= link_to 'All Tags', tags_path %>
