Implemented user authentication.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -62,3 +62,11 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
+label{
+  width: 5em;
+  float: left;
+  text-align: right;
+  margin-right: 1.5em;
+  display: block
+}
