--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,10 +10,13 @@
   <% end %>
 </div>
 </br>
-<%= link_to 'Back', articles_path %>  |  
-<%= link_to 'Edit', edit_article_path(@article) %>  |  
-<%= link_to 'Delete', article_path(@article), method: :delete, 
-    data: {confirm: "Confirm Delete Article"} %>
+<%= link_to 'Back', articles_path %>
+<% if logged_in? %>
+    |  
+  <%= link_to 'Edit', edit_article_path(@article) %>  |  
+  <%= link_to 'Delete', article_path(@article), method: :delete, 
+      data: {confirm: "Confirm Delete Article"} %>
+<% end %>
 
 <%= render partial: 'comments/form' %>
 
