--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -13,6 +13,11 @@
 
   <div>
     <p>
+      <%= f.label :username %>
+      <%= f.text_field :username %>
+    </p>
+    
+    <p>
       <%= f.label :email %>
       <%= f.text_field :email %>
     </p>
