--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -5,16 +5,17 @@
 <table>
   <thead>
     <tr>
-      <th>Email</th>
-      <th colspan="3"></th>
+      <th>Username</th>
+      <th> &nbsp;&nbsp;Email</th>
+
     </tr>
   </thead>
 
   <tbody>
     <% @authors.each do |author| %>
       <tr>
+        <td style="padding: 5px;"><%= author.username %></td>
         <td style="padding: 5px;"><%= author.email %></td>
-        <td style="padding: 5px;"><%= link_to 'Show', author %></td>
         <td style="padding: 5px;"><%= link_to 'Edit', edit_author_path(author) %></td>
         <td style="padding: 5px;"><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
