--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,9 +1,16 @@
 <p id="notice"><%= notice %></p>
 <h1 class="center"> Author</h1>
+<div style="margin: 0 auto;">
 <p>
-  <strong>Email:</strong>
-  <%= @author.email %>
+  <div>
+    <strong>User Name:</strong>
+    <strong>Email:</strong>
+  </div>
+  <div>
+    <%= @author.username %>
+    <%= @author.email %>
+  </div>
 </p>
-
+</div>
 <%= link_to 'Edit', edit_author_path(@author) %> |
 <%= link_to 'Back', authors_path %>
