--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,10 @@
     <%= image_tag @article.image.url(:medium) %>
   </p>
 <% end %>
-<p><small>Created - <%= @article.created_at.strftime("%Y-%m-%d") %></small></p>
+<p>
+  <small>Created - <%= @article.created_at.strftime("%Y-%m-%d") %></small>
+  <small> By <%= @author.username %></small>
+</p>
 <div class="panel panel-default" style="margin: 0 50px 10px 50px ; padding: 5px; min-height: 200px;">
   <%= @article.body %>
 </div>
