--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -16,8 +16,10 @@
       <tr>
         <td style="padding: 5px;"><%= author.username %></td>
         <td style="padding: 5px;"><%= author.email %></td>
-        <td style="padding: 5px;"><%= link_to 'Edit', edit_author_path(author) %></td>
-        <td style="padding: 5px;"><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if author.id == current_user.id %>
+          <td style="padding: 5px;"><%= link_to 'Edit', edit_author_path(author) %></td>
+          <td style="padding: 5px;"><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
